--- a/test/integration/targets/nxos_bgp/tests/common/param.yaml
+++ b/test/integration/targets/nxos_bgp/tests/common/param.yaml
@@ -1,5 +1,7 @@
 ---
-- debug: msg="START TRANSPORT:{{ connection.transport }} nxos_bgp parameter test"
+- debug: msg="START connection={{ ansible_connection }} nxos_bgp parameter test"
+- debug: msg="Using provider={{ connection.transport }}"
+  when: ansible_connection == "local"
 
 - name: "Disable feature BGP"
   nxos_feature:
@@ -271,4 +273,4 @@
       provider: "{{ connection }}"
     ignore_errors: yes
 
-  - debug: msg="END TRANSPORT:{{ connection.transport }} nxos_bgp parameter test"
+  - debug: msg="END connection={{ ansible_connection }} nxos_bgp parameter test"
