Suggestions of first review

--- a/test/integration/targets/win_scheduled_task/tasks/failures.yml
+++ b/test/integration/targets/win_scheduled_task/tasks/failures.yml
@@ -122,12 +122,34 @@
   register: fail_trigger_invalid_month_of_year
   failed_when: fail_trigger_invalid_month_of_year.msg != "invalid month name 'fakemonth', please specify full month name"
 
+- name: fail trigger repetition with duration in incorrect format
+  win_scheduled_task:
+    name: '{{test_scheduled_task_name}}'
+    state: present
+    triggers:
+    - type: boot
+      repetition:
+      - duration: fake
+  register: fail_trigger_repetition_invalid_duration
+  failed_when: fail_trigger_repetition_invalid_duration.msg != "trigger option 'duration' must be in the XML duration format but was 'fake'"
+
+- name: fail trigger repetition with interval in incorrect format
+  win_scheduled_task:
+    name: '{{test_scheduled_task_name}}'
+    state: present
+    triggers:
+    - type: boot
+      repetition:
+      - interval: fake
+  register: fail_trigger_repetition_invalid_interval
+  failed_when: fail_trigger_repetition_invalid_interval.msg != "trigger option 'interval' must be in the XML duration format but was 'fake'"
+
 - name: fail trigger repetition option interval greater than duration
   win_scheduled_task:
     name: '{{test_scheduled_task_name}}'
     state: present
     triggers:
-      - type: registration
+      - type: boot
         repetition:
         - interval: PT5M
           duration: PT1M
