--- a/test/integration/targets/azure_rm_sqlserver_facts/tasks/main.yml
+++ b/test/integration/targets/azure_rm_sqlserver_facts/tasks/main.yml
@@ -11,6 +11,14 @@
     admin_username: mylogin
     admin_password: Testpasswordxyz12!
 
+- name: Create SQL Server - 2
+  azure_rm_sqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "sqlsrv{{ rpfx }}x"
+    location: eastus
+    admin_username: mylogin
+    admin_password: Testpasswordxyz12!
+
 - name: Gather facts SQL Server
   azure_rm_sqlserver_facts:
     resource_group: "{{ resource_group }}"
@@ -22,7 +30,29 @@
       - output.changed == False
       - output.servers.sqlsrv{{ rpfx }}.id != None
 
-- name: Gather facts SQL Server
+- name: Gather facts SQL Server - second
+  azure_rm_sqlserver_facts:
+    resource_group: "{{ resource_group }}"
+    server_name: "sqlsrv{{ rpfx }}x"
+  register: output
+- name: Assert that facts are returned
+  assert:
+    that:
+      - output.changed == False
+      - output.servers.sqlsrv{{ rpfx }}x.id != None
+
+- name: Gather facts SQL Server - unexisting
+  azure_rm_sqlserver_facts:
+    resource_group: "{{ resource_group }}"
+    server_name: "sqlsrvunexisting"
+  register: output
+- name: Assert that facts are returned
+  assert:
+    that:
+      - output.changed == False
+      - output.servers.sqlsrvunexisting == None
+
+- name: Gather facts SQL Server - list
   azure_rm_sqlserver_facts:
     resource_group: "{{ resource_group }}"
   register: output
@@ -31,6 +61,7 @@
     that:
       - output.changed == False
       - output.servers.sqlsrv{{ rpfx }}.id != None
+      - output.servers.sqlsrv{{ rpfx }}x.id != None
 
 - name: Delete instance of SQL Server
   azure_rm_sqlserver:
