--- a/test/integration/targets/azure_rm_sqlserver_facts/tasks/main.yml
+++ b/test/integration/targets/azure_rm_sqlserver_facts/tasks/main.yml
@@ -29,6 +29,13 @@
     that:
       - output.changed == False
       - output.servers.sqlsrv{{ rpfx }}.id != None
+      - output.servers.sqlsrv{{ rpfx }}.name == "sqlsrv{{ rpfx }}"
+      - output.servers.sqlsrv{{ rpfx }}.type != None
+      - output.servers.sqlsrv{{ rpfx }}.location != None
+      - output.servers.sqlsrv{{ rpfx }}.kind != None
+      - output.servers.sqlsrv{{ rpfx }}.version != None
+      - output.servers.sqlsrv{{ rpfx }}.state != None
+      - output.servers.sqlsrv{{ rpfx }}.fully_qualified_domain_name != None
 
 - name: Gather facts SQL Server - second
   azure_rm_sqlserver_facts:
@@ -40,17 +47,24 @@
     that:
       - output.changed == False
       - output.servers.sqlsrv{{ rpfx }}x.id != None
+      - output.servers.sqlsrv{{ rpfx }}x.name == "sqlsrv{{ rpfx }}x"
+      - output.servers.sqlsrv{{ rpfx }}x.type != None
+      - output.servers.sqlsrv{{ rpfx }}x.location != None
+      - output.servers.sqlsrv{{ rpfx }}x.kind != None
+      - output.servers.sqlsrv{{ rpfx }}x.version != None
+      - output.servers.sqlsrv{{ rpfx }}x.state != None
+      - output.servers.sqlsrv{{ rpfx }}x.fully_qualified_domain_name != None
 
 - name: Gather facts SQL Server - unexisting
   azure_rm_sqlserver_facts:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrvunexisting"
+    server_name: "unexisting"
   register: output
 - name: Assert that facts are returned
   assert:
     that:
       - output.changed == False
-      - output.servers.sqlsrvunexisting == None
+      - output.servers == False
 
 - name: Gather facts SQL Server - list
   azure_rm_sqlserver_facts:
@@ -61,10 +75,30 @@
     that:
       - output.changed == False
       - output.servers.sqlsrv{{ rpfx }}.id != None
+      - output.servers.sqlsrv{{ rpfx }}.name == "sqlsrv{{ rpfx }}"
+      - output.servers.sqlsrv{{ rpfx }}.type != None
+      - output.servers.sqlsrv{{ rpfx }}.location != None
+      - output.servers.sqlsrv{{ rpfx }}.kind != None
+      - output.servers.sqlsrv{{ rpfx }}.version != None
+      - output.servers.sqlsrv{{ rpfx }}.state != None
+      - output.servers.sqlsrv{{ rpfx }}.fully_qualified_domain_name != None
       - output.servers.sqlsrv{{ rpfx }}x.id != None
+      - output.servers.sqlsrv{{ rpfx }}x.name == "sqlsrv{{ rpfx }}x"
+      - output.servers.sqlsrv{{ rpfx }}x.type != None
+      - output.servers.sqlsrv{{ rpfx }}x.location != None
+      - output.servers.sqlsrv{{ rpfx }}x.kind != None
+      - output.servers.sqlsrv{{ rpfx }}x.version != None
+      - output.servers.sqlsrv{{ rpfx }}x.state != None
+      - output.servers.sqlsrv{{ rpfx }}x.fully_qualified_domain_name != None
 
 - name: Delete instance of SQL Server
   azure_rm_sqlserver:
     resource_group: "{{ resource_group }}"
     name: "sqlsrv{{ rpfx }}"
+    state: absent
+
+- name: Delete instance of SQL Server
+  azure_rm_sqlserver:
+    resource_group: "{{ resource_group }}"
+    name: "sqlsrv{{ rpfx }}x"
     state: absent
