updates to azure_rm_sqlserver_facts

--- a/test/integration/targets/azure_rm_sqlserver_facts/tasks/main.yml
+++ b/test/integration/targets/azure_rm_sqlserver_facts/tasks/main.yml
@@ -64,7 +64,7 @@
   assert:
     that:
       - output.changed == False
-      - output.servers == False
+      - output.servers == {}
 
 - name: Gather facts SQL Server - list
   azure_rm_sqlserver_facts:
