--- a/test/integration/targets/nxos_vxlan_vtep/tests/common/sanity.yaml
+++ b/test/integration/targets/nxos_vxlan_vtep/tests/common/sanity.yaml
@@ -1,5 +1,7 @@
 ---
-- - debug: msg="START TRANSPORT:{{ connection.transport }} nxos_vxlan_vtep sanity test"
+- debug: msg="START connection={{ ansible_connection }} nxos_vxlan_vtep sanity test"
+- debug: msg="Using provider={{ connection.transport }}"
+  when: ansible_connection == "local"
 
 - block:
   - name: "Apply N7K specific setup config"
@@ -17,11 +19,11 @@
     - name: configure vxlan_vtep
       nxos_vxlan_vtep: &configure9
         interface: nve1
-        description: default
+        description: "abcd"
         host_reachability: true
         source_interface: Loopback0
         source_interface_hold_down_time: 30
-        shutdown: true
+        shutdown: false
         provider: "{{ connection }}"
       register: result
   
@@ -37,7 +39,26 @@
         that:
           - "result.changed == false"
 
-    when: (platform | search('N9K'))
+    - name: reset vxlan_vtep
+      nxos_vxlan_vtep: &def9
+        interface: nve1
+        description: default
+        host_reachability: false
+        source_interface_hold_down_time: default
+        source_interface: default
+        shutdown: true
+        provider: "{{ connection }}"
+      register: result
+  
+    - assert: *true
+  
+    - name: "reset Idempotence"
+      nxos_vxlan_vtep: *def9
+      register: result
+
+    - assert: *false
+
+    when: (platform is search('N9K'))
 
   - block:
     - name: configure vxlan_vtep
@@ -46,7 +67,7 @@
         description: default
         host_reachability: true
         source_interface: Loopback0
-        shutdown: true
+        shutdown: false
         provider: "{{ connection }}"
       register: result
   
@@ -62,7 +83,25 @@
         that:
           - "result.changed == false"
 
-    when: (platform | search('N7K'))
+    - name: reset vxlan_vtep
+      nxos_vxlan_vtep: &def7
+        interface: nve1
+        description: default
+        host_reachability: false
+        source_interface: default
+        shutdown: true
+        provider: "{{ connection }}"
+      register: result
+  
+    - assert: *true
+  
+    - name: "reset Idempotence"
+      nxos_vxlan_vtep: *def7
+      register: result
+
+    - assert: *false
+
+    when: (platform is search('N7K'))
 
   - name: remove vxlan_vtep
     nxos_vxlan_vtep: &remove
