--- a/test/integration/targets/filesystem/defaults/main.yml
+++ b/test/integration/targets/filesystem/defaults/main.yml
@@ -11,5 +11,5 @@ tested_filesystems:
   ext2: {fssize: 10, grow: True}
   xfs: {fssize: 20, grow: False}  # grow requires a mounted filesystem
   btrfs: {fssize: 100, grow: False}  # grow not implemented
-  vfat: {fssize: 20, grow: False}  # fatresize not supported due to segfaults
+  vfat: {fssize: 20, grow: True}
   # untested: lvm, requires a block device
