- Corrected test with "authorize: yes" option.

--- a/test/integration/targets/ios_logging/tests/cli/basic.yaml
+++ b/test/integration/targets/ios_logging/tests/cli/basic.yaml
@@ -136,6 +136,7 @@
     level: warnings
     trap: warnings
     state: present
+    authorize: yes
   register: result
 
 - assert:
@@ -153,6 +154,7 @@
     level: warnings
     trap: warnings
     state: present
+    authorize: yes
   register: result
 
 - assert:
