--- a/test/integration/targets/vr_dns_record/test_vr_dns_record/tasks/create_record.yml
+++ b/test/integration/targets/vr_dns_record/test_vr_dns_record/tasks/create_record.yml
@@ -1,8 +1,9 @@
 ---
 - name: test setup dns record
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
+    record_type: "{{ item.record_type | default(omit) }}"
     state: absent
   register: result
 - name: verify test setup dns record
@@ -12,11 +13,12 @@
 
 - name: test create a dns record in check mode
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
     data: "{{ item.data }}"
     ttl: "{{ item.ttl | default(omit) }}"
     record_type: "{{ item.record_type | default(omit) }}"
+    priority: "{{ item.priority | default(omit) }}"
   check_mode: yes
   register: result
 - name: verify test create a dns record in check mode
@@ -26,34 +28,38 @@
 
 - name: test create a dns record
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
     data: "{{ item.data }}"
     ttl: "{{ item.ttl | default(omit) }}"
     record_type: "{{ item.record_type | default(omit) }}"
+    priority: "{{ item.priority | default(omit) }}"
   register: result
 - name: verify test create a dns record
   assert:
     that:
     - result is changed
     - result.vultr_dns_record.data == "{{ item.data }}"
-    - result.vultr_dns_record.name == "{{ item.name }}"
+    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
     - result.vultr_dns_record.record_type == "{{ item.record_type | default('A') }}"
     - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
+    - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
 
 - name: test create a dns record idempotence
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
     data: "{{ item.data }}"
     ttl: "{{ item.ttl | default(omit) }}"
     record_type: "{{ item.record_type | default(omit) }}"
+    priority: "{{ item.priority | default(omit) }}"
   register: result
 - name: verify test create a dns record idempotence
   assert:
     that:
     - result is not changed
     - result.vultr_dns_record.data == "{{ item.data }}"
-    - result.vultr_dns_record.name == "{{ item.name }}"
+    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
     - result.vultr_dns_record.record_type == "{{ item.record_type | default('A') }}"
     - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
+    - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
