--- a/test/integration/targets/vr_dns_record/test_vr_dns_record/tasks/remove_record.yml
+++ b/test/integration/targets/vr_dns_record/test_vr_dns_record/tasks/remove_record.yml
@@ -1,9 +1,9 @@
 ---
 - name: test remove a dns record in check mode
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
-    data: "{{ item.update_data }}"
+    data: "{{ item.update_data | default(item.data) }}"
     record_type: "{{ item.record_type | default(omit) }}"
     multiple: "{{ item.multiple | default(omit) }}"
     state: absent
@@ -13,16 +13,17 @@
   assert:
     that:
     - result is changed
-    - result.vultr_dns_record.data == "{{ item.update_data }}"
-    - result.vultr_dns_record.name == "{{ item.name }}"
+    - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
+    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
     - result.vultr_dns_record.record_type == "{{ item.record_type | default('A') }}"
     - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
+    - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(0)) }}
 
 - name: test remove second dns record in check mode
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
-    data: "{{ item.data }}"
+    data: "{{ item.data | default(item.data) }}"
     record_type: "{{ item.record_type | default(omit) }}"
     multiple: "{{ item.multiple | default(omit) }}"
     state: absent
@@ -33,17 +34,18 @@
   assert:
     that:
     - result is changed
-    - result.vultr_dns_record.data == "{{ item.data }}"
-    - result.vultr_dns_record.name == "{{ item.name }}"
+    - result.vultr_dns_record.data == "{{ item.data | default(item.data) }}"
+    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
     - result.vultr_dns_record.record_type == "{{ item.record_type | default('A') }}"
     - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
+    - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
   when: item.multiple is defined and item.multiple == true
 
 - name: test remove a dns record
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
-    data: "{{ item.update_data }}"
+    data: "{{ item.update_data | default(item.data) }}"
     record_type: "{{ item.record_type | default(omit) }}"
     multiple: "{{ item.multiple | default(omit) }}"
     state: absent
@@ -52,14 +54,15 @@
   assert:
     that:
     - result is changed
-    - result.vultr_dns_record.data == "{{ item.update_data }}"
-    - result.vultr_dns_record.name == "{{ item.name }}"
+    - result.vultr_dns_record.data == "{{ item.update_data | default(item.data) }}"
+    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
     - result.vultr_dns_record.record_type == "{{ item.record_type | default('A') }}"
     - result.vultr_dns_record.ttl == {{ item.update_ttl | default(300) }}
+    - result.vultr_dns_record.priority == {{ item.update_priority | default(item.priority | default(0)) }}
 
 - name: test remove second dns record
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
     data: "{{ item.data }}"
     record_type: "{{ item.record_type | default(omit) }}"
@@ -72,16 +75,17 @@
     that:
     - result is changed
     - result.vultr_dns_record.data == "{{ item.data }}"
-    - result.vultr_dns_record.name == "{{ item.name }}"
+    - result.vultr_dns_record.name == "{{ item.name | default("") }}"
     - result.vultr_dns_record.record_type == "{{ item.record_type | default('A') }}"
     - result.vultr_dns_record.ttl == {{ item.ttl | default(300) }}
+    - result.vultr_dns_record.priority == {{ item.priority | default(0) }}
   when: item.multiple is defined and item.multiple == true
 
 - name: test remove a dns record idempotence
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
-    data: "{{ item.update_data }}"
+    data: "{{ item.update_data | default(item.data) }}"
     record_type: "{{ item.record_type | default(omit) }}"
     multiple: "{{ item.multiple | default(omit) }}"
     state: absent
@@ -93,7 +97,7 @@
 
 - name: test remove second dns record idempotence
   vr_dns_record:
-    name: "{{ item.name }}"
+    name: "{{ item.name | default(omit) }}"
     domain: "{{ vr_dns_domain_name }}"
     data: "{{ item.data }}"
     record_type: "{{ item.record_type | default(omit) }}"
