--- a/test/integration/targets/vr_dns_record/test_vr_dns_record/tasks/main.yml
+++ b/test/integration/targets/vr_dns_record/test_vr_dns_record/tasks/main.yml
@@ -9,5 +9,7 @@
     that:
     - result is successful
 
+- include_tasks: test_fail_multiple.yml
+
 - include_tasks: record.yml
   with_items: "{{ vr_dns_record_items }}"
