updates to azure_rm_sqldatabase

--- a/test/integration/targets/azure_rm_sqldatabase/tasks/main.yml
+++ b/test/integration/targets/azure_rm_sqldatabase/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Create SQL Server
   azure_rm_sqlserver:
     resource_group: "{{ resource_group }}"
-    name: "sqlsrv{{ rpfx }}"
+    name: sqlsrv{{ rpfx }}
     location: eastus
     admin_username: mylogin
     admin_password: Testpasswordxyz12!
@@ -14,8 +14,8 @@
 - name: Create instance of SQL Database -- check mode
   azure_rm_sqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrv{{ rpfx }}"
-    name: test-database
+    server_name: sqlsrv{{ rpfx }}
+    name: database{{ rpfx }}
     location: eastus
   check_mode: yes
   register: output
@@ -27,8 +27,8 @@
 - name: Create instance of SQL Database
   azure_rm_sqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrv{{ rpfx }}"
-    name: test-database
+    server_name: sqlsrv{{ rpfx }}
+    name: database{{ rpfx }}
     location: eastus
   register: output
 - name: Assert the resource instance is well created
@@ -40,8 +40,8 @@
 - name: Create again instance of SQL Database
   azure_rm_sqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrv{{ rpfx }}"
-    name: test-database
+    server_name: sqlsrv{{ rpfx }}
+    name: database{{ rpfx }}
     location: eastus
   register: output
 - name: Assert the state has not changed
@@ -53,8 +53,8 @@
 - name: Delete instance of SQL Database -- check mode
   azure_rm_sqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrv{{ rpfx }}"
-    name: test-database
+    server_name: sqlsrv{{ rpfx }}
+    name: database{{ rpfx }}
     state: absent
   check_mode: yes
   register: output
@@ -66,8 +66,8 @@
 - name: Delete instance of SQL Database
   azure_rm_sqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrv{{ rpfx }}"
-    name: test-database
+    server_name: sqlsrv{{ rpfx }}
+    name: database{{ rpfx }}
     state: absent
   register: output
 - name: Assert the state has changed
@@ -78,8 +78,8 @@
 - name: Delete unexisting instance of SQL Database
   azure_rm_sqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: "sqlsrv{{ rpfx }}"
-    name: test-database
+    server_name: sqlsrv{{ rpfx }}
+    name: database{{ rpfx }}
     state: absent
   register: output
 - name: Assert the state has changed
@@ -90,5 +90,5 @@
 - name: Delete instance of SQL Server
   azure_rm_sqlserver:
     resource_group: "{{ resource_group }}"
-    name: "sqlsrv{{ rpfx }}"
+    name: sqlsrv{{ rpfx }}
     state: absent
