with_items -> loop

--- a/test/integration/targets/ios_l2_interface/tests/cli/agg.yaml
+++ b/test/integration/targets/ios_l2_interface/tests/cli/agg.yaml
@@ -7,7 +7,7 @@
       - switchport
     parents:
       - "interface {{ item }}"
-  with_items:
+  loop:
     - "{{ test_interface }}"
     - "{{ test_interface2 }}"
 
