--- a/test/integration/targets/git/tasks/setup.yml
+++ b/test/integration/targets/git/tasks/setup.yml
@@ -11,6 +11,7 @@
 - name: SETUP | install git
   package:
     name: git
+  when: ansible_distribution != "MacOSX"
 
 - name: SETUP | verify that git is installed so this test can continue
   shell: which git
