--- a/test/integration/targets/subversion/tasks/main.yml
+++ b/test/integration/targets/subversion/tasks/main.yml
@@ -28,6 +28,7 @@
 - name: install subversion
   package:
     name: subversion
+  when: ansible_distribution != "MacOSX"
 
 - name: verify that subversion is installed so this test can continue
   shell: which svn
