Trying different syntax for ec2_asg test

--- a/test/integration/targets/ec2_asg/tasks/main.yml
+++ b/test/integration/targets/ec2_asg/tasks/main.yml
@@ -183,7 +183,7 @@
 
     - assert:
         that:
-        - "output.metrics_collection.0.Metric | match('Group*')"
+        - "'Group' in output.metrics_collection.0.Metric"
 
     - name: kill asg
       ec2_asg:
